Fix sticky footer on IE

--- a/ckanext/latvian_theme/public/base/css/ckan_overrides.css
+++ b/ckanext/latvian_theme/public/base/css/ckan_overrides.css
@@ -327,16 +327,18 @@ body {
 }
 
 [role=main] {
-  flex: 1;
+    flex: 0 1 auto;
 }
-
-
 
 .modal {
     display: flex;
     flex-direction: column;
 }
 
+.hide {
+  display: none;
+}
+
 .modal-body {
-  flex: 1;
+  flex: 0 1 auto;
 }
